2006-03-26	ujwal

	* Added preference to choose between Metal and Aqua style window and tabs.
	* Added support to show warning bell in tab.

2006-03-25	ujwal

	* Added back support to show/hide first tab.

2006-03-23	ujwal

	* Made window metallized to get full Safari tab effect.

2006-03-20	ujwal

	* Initial checkin of new tabs provided by PSMTabBarControl. Not complete
	  or stable yet.
	* Rolled back the PTYTextView:-refresh change. Too many problems.

2006-03-17	ujwal
	
	* PTYTextView:-refresh selects only dirty regions to refresh before 
	  calling drawRect.
	* Removed all NSConnection related stuff from PTYTask.

2006-03-15  fabian

    * Put in locks to eliminate the bugs related to opening/closing sessions.
    * Removed NSConnection once again.
    * A (not-so-elegant) fix for occassional tab label refreshing problem.
    
2006-03-03  ujwal
	
	* Fixed VT100Screen:-setNewLine to redraw whole screen if buffer is full
	* Protecting PTYTextView:-refresh with locking datasource
	* Fixed memory leak in VT100Screen:-setString
	* Not using NSData in PTYTask:+_processReadThread. Instead passing raw char buffer.

2006-03-02  ujwal

	* Fixed VT100Screen:-numberOfLines to guarantee that it does not
	  report more lines than it actually has.

2006-03-02  fabian

    * Fixed VT100Screen::eraseInDisplay behavior.
    * Fixed CPU usage issue.
    * Changed VT100Screen::setNewLine so that we are not redrawing all
      characters in the case of a scrolling.
    
2006-03-01  fabian

    * Fixed a memory leak in VT100Screen
    * Changed the timing behavior of PTYSession and PTYTextView. Now we use
      the system clock, and the blinking is no longer associated with the
      input.
    * Changed the alloc/dealloc code so that now VT100Screen, VT100Terminal,
      and PTYTask objects are no longer retaining each other. All alloc and
      dealloc of these objects is done in PTYSession.
      
2006-03-01	ujwal
